Proyectos y practicas/3º/PL/PL-Practica-Final-AJS/PL_P2_AGUILAR_RODRIGUEZ/tests/propios/invalidos_sintaxis/test2.ajs

// Comentario de línea en más de una

// aquí
sigue el comentario

// No cerrar un comentario

/*
    asdasdas
    asdasdasdas
    DATOSdas
    dataas
    dataasdas
    dataasdasasd

let a = 2;


